package com.example.factory;

public abstract class Product {

  // 部品の抽象メソッド
  public abstract void use();

}
